# seminar-llvm-vplan

./: README.md
code/: .gitignore  CMakeLists.txt  simple_loop.c  simple_loop.cpp  slm.ll
paper/: outline.tex  paper.bib  paper.tex
paper/other/: inner-loop-scalar.ll  inner-loop-vec.ll  opt-inner-loop-vplan-dbg.txt
presentation/: vplan-presentation.pptx
